data/all_generated_tests/raw_wast_tests/nop_StackCorruption_131.wast
;; 2. **Test Description**:     Implement a `loop` in WebAssembly where each iteration contains a `nop` instruction. Evaluate the stack before entering the loop and after exiting to ensure there is no change due to the `nop` instructions.    **Constraint**: Control flow must remain unaffected by `nop`.    **Reasoning**: Verifies if `nop` could inadvertently modify the loop's stack behavior possibly leading to stack corruption.

(assert_invalid
  (module 
    (func $loop_with_nop
      (loop $my_loop
        nop
        br $my_loop
      )
    )
  )
  "unreachable code"
)